--- a/DateTimePickerTaiwan/DateTimePickerTaiwan.html
+++ b/DateTimePickerTaiwan/DateTimePickerTaiwan.html
@@ -59,7 +59,7 @@
     <script src=moment/moment.js></script>
     <script src=moment/moment-taiwan.js></script>
     <script src=bootstrap-datetimepicker/js/bootstrap-datetimepicker.js></script>
-    <script src=bootstrap-datetimepicker/js/bootstrap-datetimepickerTaiwan.js></script><!--目前還沒完成手動打上數字時的處理 所以用readonly狀態-->
+    <script src=bootstrap-datetimepicker/js/bootstrap-datetimepickerTaiwan.js></script>
     <script src="jQuery-Mask-Plugin\jquery.mask.js"></script>
     <script>
         $(function () {
